--- a/main/busnow.html
+++ b/main/busnow.html
@@ -6,16 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/main/busnow.css">
   <title>BusNow</title>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js"></script>
-  <link href="https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css" rel="stylesheet" />
+  <link href="https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css" rel="stylesheet" />  
 </head>
 
 <body>
   <div class="top-bar">
+    <div class="logo">
+      <img src="/imagenes/bus.png" alt="Logo"  width="100" height="100">
+    </div>
     <ul>
       <li><a href="/barrasuperior/tarifas/tarifas.html" id="tariffsLink">Tarifas</a></li>
-      <li><a href="/main/busnow.html" class="active">Mapa<alt="mapa" width="25" height="30" id="mapLink"></a></li>
+      <li><a href="/main/busnow.html" class="active">Mapa</a></li>
       <li><a href="/barrasuperior/horarios/horarios.html" id="schedulesLink">Horarios</a></li>
     </ul>
     <div class="menu">
@@ -36,9 +37,16 @@
   </div>
 
   <div id="map"></div>
-  <script src="/main/busnow.js"></script>
-  <script src="/main/dark-mode.switch.js"></script>
-  <script src="/main/language-selector.js"></script>
+  <div id="tiempo-restante"></div> 
+
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js"></script>
+  <script src="../main/busnow.js"></script>
+
+  <footer>
+    <p>&copy; 2023 BusNow. Todos los derechos reservados.</p>
+  </footer>
 </body>
+
 
 </html>
